# xgc2-tbb

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml  release.yml  update-tbb.yml
.xgc2/: product.yml
.xgc2/scripts/: build_deb.sh  build_tbb.sh  check_package_compliance.sh  fetch_tbb.sh  publish_self_hosted_apt.sh  smoke_test_installed.sh
cmake/: tbb_vendor-extras.cmake  xgc2_tbb-extras.cmake
env-hooks/: 99.xgc2_tbb.sh.develspace.in  99.xgc2_tbb.sh.installspace.in
scripts/: build_deb.sh  build_tbb.sh  check_package_compliance.sh  publish_apt_repo.sh
