<?xml version="1.0"?>
<package format="2">
  <name>tbb_vendor</name>
  <version>0.1.0</version>
  <description>ROS1 Noetic vendor package for oneAPI Threading Building Blocks.</description>

  <maintainer email="lxk36@users.noreply.github.com">Lxk_buaa</maintainer>
  <author email="lxk36@users.noreply.github.com">Lxk_buaa</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
