<?xml version="1.0"?>
<package format="2">
  <name>xgc2_tbb</name>
  <version>0.1.0</version>
  <description>ROS1 Noetic vendor package for the XGC2 oneAPI Threading Building Blocks runtime.</description>

  <maintainer email="lxk36@users.noreply.github.com">Lxk_buaa</maintainer>
  <author email="lxk36@users.noreply.github.com">Lxk_buaa</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <exec_depend>catkin</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
